<resources>
    <string name="app_name">Calculator</string>
    <string name="seven">7</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="clr">C</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">x</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="divide">/</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="percent">%</string>
    <string name="doubleZero">00</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="content_description_for_history_button">History button</string>
    <string name="default_value_for_history_item">Result of calculating</string>
    <string name="content_description_for_delete_button">Delete all results button</string>
    <string name="toolbar_tv_value">HISTORY</string>
    <string name="no_results_available">NO RESULTS AVAILABLE</string>
    <string name="content_description_for_settings_button">Settings button</string>
    <string name="toolbar_settings_tv">SETTINGS</string>
    <string name="app_version">0.8</string>
    <string name="content_description_for_image_in_settings">Application logo</string>
    <string name="dc_question_for_user">Are you sure?</string>
    <string name="dc_description_of_operation">This will delete all results of calculating</string>
    <string name="dc_btn_yes_text">YES</string>
    <string name="dc_btn_no_text">NO</string>
    <string name="toast_msg_for_no_results">No results to delete</string>
</resources>