<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/foggy_grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dc_question_for_user"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/dc_description_of_operation"
        android:textColor="#212121"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_item"
            android:gravity="center"
            android:text="@string/dc_btn_yes_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_item"
            android:gravity="center"
            android:text="@string/dc_btn_no_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>