<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foggy_grey"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/month_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInput"
        app:rowCount="5">


        <Button
            android:id="@+id/btnSeven"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/seven"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/eight"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/nine"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/divide"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/four"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/five"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/six"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/multiply"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button

            android:id="@+id/btnThree"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/three"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/two"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/one"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/minus"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/dot"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/zero"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnClr"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/clr"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/plus"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_equal"
            android:text="@string/equal"
            android:textSize="20sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/percent"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnDoubleZero"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_numbers"
            android:text="@string/doubleZero"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnBackspace"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_symbols"
            android:text="@string/backspace"
            android:textSize="20sp"
            app:layout_column="2"
            app:layout_row="0" />


    </androidx.gridlayout.widget.GridLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_weight="1"-->
    <!--        >-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonSeven"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/seven"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonEight"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/eight"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonNine"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/nine"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonDivide"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onOperator"-->
    <!--            android:text="@string/divide"-->
    <!--            />-->
    <!--    </LinearLayout>-->
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_weight="1"-->
    <!--        >-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonFour"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/four"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonFive"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/five"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonSix"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/six"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonMultiply"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onOperator"-->
    <!--            android:text="@string/multiply"-->
    <!--            />-->
    <!--    </LinearLayout>-->
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_weight="1"-->
    <!--        >-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonThree"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/three"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonTwo"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/two"-->
    <!--            />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonOne"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/one"-->
    <!--            android:contentDescription="TODO" />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonSubtract"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onOperator"-->
    <!--            android:text="@string/minus"-->
    <!--            />-->
    <!--    </LinearLayout>-->
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_weight="1"-->
    <!--        >-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonDot"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDecimalPoint"-->
    <!--            android:text="@string/dot"-->
    <!--             />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonZero"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onDigit"-->
    <!--            android:text="@string/zero"-->
    <!--             />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonClr"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:onClick="onClear"-->
    <!--            android:text="@string/clr"-->
    <!--             />-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonPlus"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onOperator"-->
    <!--            android:text="@string/plus"-->
    <!--             />-->
    <!--    </LinearLayout>-->
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_weight="1"-->
    <!--        >-->
    <!--        <Button-->
    <!--            android:layout_margin="2dp"-->
    <!--            android:id="@+id/buttonEqual"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:onClick="onEqual"-->
    <!--            android:text="@string/equal"-->
    <!--            />-->
    <!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>